--- a/templates/logins/login.html
+++ b/templates/logins/login.html
@@ -74,7 +74,7 @@
 </style>
 
 <div class="auth-container">
-    <h2>Login to SwiftShip</h2>
+    <h2>Login</h2>
     
     <form method="POST">
         {% csrf_token %}
